# comments-tw

./: .gitignore  .pre-commit-config.yaml  README.md  development.yml  example_data_fixture.json  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
apps/: conftest.py
apps/blog/: apps.py  models.py
apps/blog/migrations/: 0001_initial.py
apps/blog/tests/factories/: post_factory.py
apps/comments/: admin.py  apps.py  models.py  serializers.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_alter_comment_options.py  0003_alter_comment_parent.py
apps/comments/tests/factories/: __init__.py  comment_factory.py
apps/comments/tests/test_api/: test_comments.py
apps/comments/tests/test_models/: test_comment.py
apps/users/: apps.py
apps/users/migrations/: 0001_initial.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
