[tool.poetry]
name = "comments"
version = "0.1.0"
description = "тестовое задание"
authors = ["Karpets Pavel <karpets.pavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
